--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   frontend:
     build:
@@ -7,6 +5,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
+    depends_on:
+      - backend
 
   backend:
     build:
@@ -15,18 +15,24 @@ services:
     ports:
       - "5000:5000"
     depends_on:
-      - db
-
-  db:
+      mysql:
+        condition: service_healthy
+      
+  mysql:
     image: mysql:8
     container_name: mysql-database
     environment:
       MYSQL_ROOT_PASSWORD: yourpassword
       MYSQL_DATABASE: workshops_db
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
+      interval: 5s
+      timeout: 10s
+      retries: 10
     ports:
       - "3306:3306"
     volumes:
-      - db-data:/var/lib/mysql
+      - mysql-data:/var/lib/mysql
 
 volumes:
   db-data:
