--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,10 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+    environment:
+      VUE_APP_GOOGLE_MAPS_API_KEY: ${VUE_APP_GOOGLE_MAPS_API_KEY}
     ports:
       - "8080:8080"
-# console.log(process.env.MYSQL_HOST, process.env.MYSQL_USER, process.env.MYSQL_PASSWORD, process.env.MYSQL_DATABASE);
 
   backend:
     build:
@@ -21,7 +22,7 @@ services:
     depends_on:
       mysql:
         condition: service_healthy
-      
+        
   mysql:
     image: mysql:8
     container_name: mysql-database
