--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "NODE_ENV=test jest --forceExit --detectOpenHandles",
+    "test": "jest --forceExit --detectOpenHandles",
     "start": "node server.js"
   },
   "keywords": [],
