--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
-name: Dispatch Source Code
+name: Dispatch Source Code to Infra
 
 on:
   workflow_dispatch:
 
 jobs:
-  test:
+  dispatch_code:
     runs-on: ubuntu-24.04
     steps:
       - name: Checkout Code
@@ -15,6 +15,6 @@ jobs:
           curl -X POST -H "Authorization: token ${{ secrets.PAT }}" \
                  -H "Accept: application/vnd.github.v3+json" \
                  https://api.github.com/repos/drshooby/Sharenet-Vue-Spa-Infra/dispatches \
-                 -d '{"event_type":"deploy","client_payload":{"ref":"main"}}'
+                 -d '{"event_type":"dispatch","client_payload":{"ref":"main"}}'
   
     
