--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,6 @@ jobs:
           curl -X POST -H "Authorization: token ${{ secrets.PAT }}" \
                  -H "Accept: application/vnd.github.v3+json" \
                  https://api.github.com/repos/drshooby/Sharenet-Vue-Spa-Infra/dispatches \
-                 -d '{"event_type":"dispatch","client_payload":{"ref":"main"}}'
+                 -d '{"event_type":"deploy","client_payload":{"ref":"main"}}'
   
     
